[package]
name = "drift"
version = "2.92.0"
edition = "2021"
description = "anchor-gen generated crate for interacting with drift program"
readme = "README.md"
repository = "https://github.com/mshizzle13/drift"
license = "MIT OR Apache-2.0"
keywords = ["drift", "drift exchange", "drift-rs"]
categories = ["finance", "cryptography::cryptocurrencies"]
build = "build.rs"


[dependencies]
anchor-gen = {version = "0.3.1"}
anchor-lang = {version = "0.30.1"}
