[package]
name = "drift"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
mainnet = []

[dependencies]
anchor-gen = "0.3.0"
anchor-lang = "0.30.1"
solana-program = "1.16"
anchor-spl = "0.30.1"
